"""
Maximo Client - Hoofd Maximo API client

Biedt high-level interface voor Maximo operaties.

Auteur: Pedro (met Cursor AI assistentie)
Datum: 4 februari 2026
Dependencies: requests
"""

import logging
from typing import Dict, List, Any, Optional
from pathlib import Path

logger = logging.getLogger(__name__)


class MaximoClient:
    """
    High-level Maximo API client.
    
    Biedt convenience methods voor veelvoorkomende Maximo operaties:
    - PM creation/update
    - JobPlan creation/update
    - Location creation/update
    - Batch operations
    
    Example:
        >>> client = MaximoClient(
        ...     base_url="https://maximo.example.com",
        ...     username="admin",
        ...     password="secret"
        ... )
        >>> client.authenticate()
        >>> result = client.create_pm(pm_data)
    """
    
    def __init__(
        self, 
        base_url: str,
        username: str,
        password: str,
        verify_ssl: bool = True
    ):
        """
        Initialiseer Maximo client.
        
        Args:
            base_url: Maximo base URL (bijv. https://maximo.example.com)
            username: Maximo gebruikersnaam
            password: Maximo wachtwoord
            verify_ssl: SSL certificate verificatie (True in productie)
        """
        logger.info(f"MaximoClient geïnitialiseerd voor {base_url}")
        self.base_url = base_url.rstrip('/')
        self.username = username
        self.password = password
        self.verify_ssl = verify_ssl
        
        self.rest_client = None  # TODO: Initialiseer RestClient
        self.authenticated = False
    
    def authenticate(self) -> bool:
        """
        Authenticeer bij Maximo.
        
        Returns:
            True als authenticatie succesvol
            
        Raises:
            AuthenticationError: Bij authenticatie fout
        """
        logger.info("Authenticeren bij Maximo...")
        
        # TODO: Implementeer Maximo authenticatie
        # Maximo gebruikt verschillende auth mechanismen:
        # - Form-based (MAXAUTH cookie)
        # - Basic Auth
        # - API Key
        
        self.authenticated = True
        logger.info("✓ Authenticatie succesvol")
        return True
    
    def create_pm(self, pm_data: Dict[str, Any]) -> Dict[str, Any]:
        """
        Creëer een PM record in Maximo.
        
        Args:
            pm_data: PM data dictionary
            
        Returns:
            Response van Maximo API
            
        Raises:
            MaximoAPIError: Bij API fout
        """
        logger.debug(f"PM creëren: {pm_data.get('PMNUM')}")
        
        # TODO: Implementeer POST naar /maximo/oslc/os/mxpm
        
        return {}
    
    def update_pm(self, pmnum: str, pm_data: Dict[str, Any]) -> Dict[str, Any]:
        """
        Update een bestaand PM record in Maximo.
        
        Args:
            pmnum: PM nummer
            pm_data: PM data dictionary (delta)
            
        Returns:
            Response van Maximo API
        """
        logger.debug(f"PM updaten: {pmnum}")
        
        # TODO: Implementeer PATCH/POST naar /maximo/oslc/os/mxpm/{pmnum}
        
        return {}
    
    def create_jobplan(self, jobplan_data: Dict[str, Any]) -> Dict[str, Any]:
        """
        Creëer een JobPlan record in Maximo.
        
        Args:
            jobplan_data: JobPlan data dictionary
            
        Returns:
            Response van Maximo API
        """
        logger.debug(f"JobPlan creëren: {jobplan_data.get('JPNUM')}")
        
        # TODO: Implementeer POST naar /maximo/oslc/os/mxjobplan
        
        return {}
    
    def batch_create(
        self, 
        object_type: str, 
        records: List[Dict[str, Any]]
    ) -> List[Dict[str, Any]]:
        """
        Creëer meerdere records in één batch operatie.
        
        Args:
            object_type: Maximo object type (pm, jobplan, etc.)
            records: Lijst van records om te creëren
            
        Returns:
            Lijst van responses
        """
        logger.info(f"Batch creëren: {len(records)} {object_type} records")
        
        results = []
        for record in records:
            try:
                if object_type == "pm":
                    result = self.create_pm(record)
                elif object_type == "jobplan":
                    result = self.create_jobplan(record)
                else:
                    logger.error(f"Onbekend object type: {object_type}")
                    continue
                
                results.append(result)
            except Exception as e:
                logger.error(f"Fout bij creëren record: {e}")
                results.append({"error": str(e)})
        
        return results


if __name__ == "__main__":
    # Test de Maximo client
    logging.basicConfig(level=logging.DEBUG)
    print("MaximoClient ready for testing")
