"""
REST Client - Low-level HTTP client voor Maximo REST API

Biedt basis HTTP operaties met error handling en retry logic.

Auteur: Pedro (met Cursor AI assistentie)
Datum: 4 februari 2026
Dependencies: requests
"""

import logging
from typing import Dict, Any, Optional

logger = logging.getLogger(__name__)


class RestClient:
    """
    Low-level REST client voor Maximo API.
    
    Verzorgt HTTP requests met:
    - Retry logic
    - Timeout handling
    - Error handling
    - Request/response logging
    """
    
    def __init__(self, base_url: str, verify_ssl: bool = True):
        """
        Initialiseer REST client.
        
        Args:
            base_url: Base URL voor API
            verify_ssl: SSL verificatie
        """
        self.base_url = base_url
        self.verify_ssl = verify_ssl
        self.session = None  # TODO: Initialiseer requests.Session()
    
    def get(self, endpoint: str, params: Optional[Dict] = None) -> Dict[str, Any]:
        """GET request."""
        # TODO: Implementeer GET
        return {}
    
    def post(self, endpoint: str, data: Dict[str, Any]) -> Dict[str, Any]:
        """POST request."""
        # TODO: Implementeer POST
        return {}
    
    def patch(self, endpoint: str, data: Dict[str, Any]) -> Dict[str, Any]:
        """PATCH request."""
        # TODO: Implementeer PATCH
        return {}
    
    def delete(self, endpoint: str) -> Dict[str, Any]:
        """DELETE request."""
        # TODO: Implementeer DELETE
        return {}
