"""
MSG-3 Parser - Excel naar JSON conversie

Deze module parseert MSG-3 Excel bestanden naar een gestructureerd JSON formaat
dat gebruikt kan worden door de rest van de pipeline.

Auteur: Pedro (met Cursor AI assistentie)
Datum: 4 februari 2026
Dependencies: openpyxl, pandas
"""

import logging
from pathlib import Path
from typing import Dict, List, Any, Optional
from dataclasses import dataclass

logger = logging.getLogger(__name__)


@dataclass
class MSG3Task:
    """
    Representeert een MSG-3 taak.
    
    Dit is de basis datastructuur voor een MSG-3 maintenance taak
    zoals gedefinieerd in de ATA MSG-3 specificatie.
    
    Attributes:
        task_code: Unieke taak code (bijv. "32-11-01-001")
        description: Beschrijving van de taak
        task_type: Type taak (INS=Inspection, LUB=Lubrication, etc.)
        interval: Interval waarde (numeriek)
        interval_unit: Eenheid (FH=Flight Hours, FC=Flight Cycles, MO=Months)
        zone: Toegangszone op het vliegtuig
        ata_chapter: ATA hoofdstuk nummer
        man_hours: Geschatte man-uren
        skills: Benodigde vaardigheden/certificeringen
    """
    task_code: str
    description: str
    task_type: str
    interval: int
    interval_unit: str
    zone: Optional[str] = None
    ata_chapter: Optional[str] = None
    man_hours: Optional[float] = None
    skills: Optional[List[str]] = None
    
    def to_dict(self) -> Dict[str, Any]:
        """Converteer naar dictionary voor JSON serialisatie."""
        return {
            "task_code": self.task_code,
            "description": self.description,
            "task_type": self.task_type,
            "interval": self.interval,
            "interval_unit": self.interval_unit,
            "zone": self.zone,
            "ata_chapter": self.ata_chapter,
            "man_hours": self.man_hours,
            "skills": self.skills
        }


class MSG3Parser:
    """
    Parser voor MSG-3 Excel bestanden.
    
    Deze class leest MSG-3 Excel bestanden en converteert ze naar
    gestructureerde JSON data. Ondersteunt zowel het originele MSG-3
    formaat als het herontworpen formaat.
    
    Example:
        >>> parser = MSG3Parser()
        >>> data = parser.parse(Path("msg3.xlsx"))
        >>> print(f"Gevonden {len(data['tasks'])} taken")
    """
    
    def __init__(self):
        """Initialiseer de MSG-3 parser."""
        logger.info("MSG3Parser geïnitialiseerd")
        self.supported_versions = ["original", "redesign"]
    
    def parse(self, excel_path: Path) -> Dict[str, Any]:
        """
        Parse een MSG-3 Excel bestand naar JSON.
        
        Args:
            excel_path: Pad naar het MSG-3 Excel bestand
            
        Returns:
            Dictionary met geparseerde MSG-3 data:
            {
                "metadata": {...},
                "tasks": [...],
                "version": "original" | "redesign"
            }
            
        Raises:
            FileNotFoundError: Als het bestand niet bestaat
            ValueError: Als het bestand geen geldig MSG-3 formaat heeft
        """
        logger.info(f"Parsing MSG-3 bestand: {excel_path}")
        
        if not excel_path.exists():
            raise FileNotFoundError(f"Bestand niet gevonden: {excel_path}")
        
        # Detecteer MSG-3 versie (original vs redesign)
        version = self._detect_version(excel_path)
        logger.info(f"Gedetecteerde versie: {version}")
        
        # Parse gebaseerd op versie
        if version == "original":
            data = self._parse_original(excel_path)
        elif version == "redesign":
            data = self._parse_redesign(excel_path)
        else:
            raise ValueError(f"Onbekende MSG-3 versie: {version}")
        
        logger.info(f"Parsing compleet: {len(data.get('tasks', []))} taken gevonden")
        return data
    
    def _detect_version(self, excel_path: Path) -> str:
        """
        Detecteer de MSG-3 versie (original of redesign).
        
        Args:
            excel_path: Pad naar Excel bestand
            
        Returns:
            "original" of "redesign"
        """
        # TODO: Implementeer versie detectie logica
        # Bijvoorbeeld: check op specifieke headers, sheet namen, etc.
        logger.debug("Versie detectie...")
        return "original"
    
    def _parse_original(self, excel_path: Path) -> Dict[str, Any]:
        """
        Parse originele MSG-3 Excel formaat.
        
        Args:
            excel_path: Pad naar Excel bestand
            
        Returns:
            Geparseerde data
        """
        # TODO: Implementeer parsing van origineel formaat
        logger.debug("Parsing origineel MSG-3 formaat...")
        
        return {
            "metadata": {
                "version": "original",
                "source_file": str(excel_path),
                "parsed_at": "2026-02-04"  # TODO: Use actual timestamp
            },
            "tasks": []
        }
    
    def _parse_redesign(self, excel_path: Path) -> Dict[str, Any]:
        """
        Parse herontworpen MSG-3 Excel formaat.
        
        Dit formaat is geoptimaliseerd voor automatische verwerking
        met duidelijke headers, validatie en change tracking.
        
        Args:
            excel_path: Pad naar Excel bestand
            
        Returns:
            Geparseerde data
        """
        # TODO: Implementeer parsing van redesign formaat
        logger.debug("Parsing redesign MSG-3 formaat...")
        
        return {
            "metadata": {
                "version": "redesign",
                "source_file": str(excel_path),
                "parsed_at": "2026-02-04"
            },
            "tasks": []
        }
    
    def _extract_tasks(self, worksheet) -> List[MSG3Task]:
        """
        Extraheer taken uit een worksheet.
        
        Args:
            worksheet: Openpyxl worksheet object
            
        Returns:
            Lijst van MSG3Task objecten
        """
        tasks = []
        # TODO: Implementeer task extractie logica
        return tasks


if __name__ == "__main__":
    # Test de parser
    logging.basicConfig(level=logging.DEBUG)
    parser = MSG3Parser()
    print("MSG3Parser ready for testing")
