"""
MSG-3 Validator - Hoofd validatie logic

Valideert MSG-3 data op structuur, datatypes en business rules.

Auteur: Pedro (met Cursor AI assistentie)
Datum: 4 februari 2026
Dependencies: pydantic
"""

import logging
from typing import Dict, List, Any
from dataclasses import dataclass

logger = logging.getLogger(__name__)


@dataclass
class ValidationError:
    """
    Representeert een validatie fout.
    
    Attributes:
        field: Veld naam waar de fout optrad
        error_type: Type fout (required, invalid_type, invalid_value, etc.)
        message: Foutmelding
        severity: Severity (error, warning, info)
    """
    field: str
    error_type: str
    message: str
    severity: str = "error"


@dataclass
class ValidationResult:
    """
    Resultaat van een validatie.
    
    Attributes:
        is_valid: True als alle validaties geslaagd zijn
        errors: Lijst van ValidationError objecten
        warnings: Lijst van warnings
        info_messages: Lijst van info messages
    """
    is_valid: bool
    errors: List[ValidationError]
    warnings: List[ValidationError]
    info_messages: List[str]
    
    def get_error_summary(self) -> str:
        """Genereer een tekstuele samenvatting van fouten."""
        if self.is_valid:
            return "✓ Validatie geslaagd"
        
        summary = f"✗ Validatie gefaald: {len(self.errors)} error(s)\n"
        for error in self.errors:
            summary += f"  - {error.field}: {error.message}\n"
        return summary


class MSG3Validator:
    """
    Hoofd validator voor MSG-3 data.
    
    Voert verschillende validaties uit:
    1. Schema validatie (structuur en datatypes)
    2. Business rules validatie
    3. Referentie integriteit checks
    4. Data kwaliteit checks
    
    Example:
        >>> validator = MSG3Validator()
        >>> result = validator.validate(parsed_data)
        >>> if result.is_valid:
        ...     print("Data is geldig!")
        >>> else:
        ...     print(result.get_error_summary())
    """
    
    def __init__(self):
        """Initialiseer de validator."""
        logger.info("MSG3Validator geïnitialiseerd")
        self.schema_validator = None  # TODO: Initialiseer SchemaValidator
        self.business_rules_validator = None  # TODO: Initialiseer BusinessRulesValidator
    
    def validate(self, data: Dict[str, Any]) -> ValidationResult:
        """
        Valideer MSG-3 data.
        
        Args:
            data: Geparseerde MSG-3 data (van parser)
            
        Returns:
            ValidationResult object met resultaten
        """
        logger.info("Validatie starten...")
        errors: List[ValidationError] = []
        warnings: List[ValidationError] = []
        info_messages: List[str] = []
        
        # 1. Schema validatie
        logger.debug("Schema validatie...")
        # schema_errors = self.schema_validator.validate(data)
        # errors.extend(schema_errors)
        
        # 2. Business rules validatie
        logger.debug("Business rules validatie...")
        # rule_errors = self.business_rules_validator.validate(data)
        # errors.extend(rule_errors)
        
        # 3. Data kwaliteit checks
        logger.debug("Data kwaliteit checks...")
        # quality_warnings = self._check_data_quality(data)
        # warnings.extend(quality_warnings)
        
        is_valid = len(errors) == 0
        
        result = ValidationResult(
            is_valid=is_valid,
            errors=errors,
            warnings=warnings,
            info_messages=info_messages
        )
        
        logger.info(f"Validatie compleet: {'geslaagd' if is_valid else 'gefaald'}")
        return result
    
    def _check_data_quality(self, data: Dict[str, Any]) -> List[ValidationError]:
        """
        Voer data kwaliteit checks uit.
        
        Bijvoorbeeld:
        - Incomplete beschrijvingen
        - Verdachte interval waarden
        - Ontbrekende optionele maar belangrijke velden
        
        Args:
            data: MSG-3 data
            
        Returns:
            Lijst van warnings
        """
        warnings = []
        # TODO: Implementeer data kwaliteit checks
        return warnings


if __name__ == "__main__":
    # Test de validator
    logging.basicConfig(level=logging.DEBUG)
    validator = MSG3Validator()
    print("MSG3Validator ready for testing")
