"""
Schema Validator - JSON Schema validatie

Valideert MSG-3 data tegen een JSON schema voor structuur en datatypes.

Auteur: Pedro (met Cursor AI assistentie)
Datum: 4 februari 2026
Dependencies: pydantic of jsonschema
"""

import logging
from typing import Dict, List, Any

logger = logging.getLogger(__name__)


class SchemaValidator:
    """
    Valideert data tegen JSON schema.
    
    Gebruikt Pydantic models of JSON Schema voor het valideren
    van de structuur en datatypes van MSG-3 data.
    """
    
    def __init__(self):
        """Initialiseer de schema validator."""
        logger.debug("SchemaValidator geïnitialiseerd")
        self._load_schemas()
    
    def _load_schemas(self) -> None:
        """Laad JSON schemas voor MSG-3 data."""
        # TODO: Laad schemas van disk of definieer inline
        pass
    
    def validate(self, data: Dict[str, Any]) -> List[Any]:
        """
        Valideer data tegen schema.
        
        Args:
            data: Data om te valideren
            
        Returns:
            Lijst van ValidationError objecten
        """
        errors = []
        # TODO: Implementeer schema validatie
        return errors
